Added example direcotry

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -112,8 +112,30 @@ if ( FOUND_BOOST_TEST AND LAMA_BUILD_TEST )
     add_subdirectory ( test )
 endif ( FOUND_BOOST_TEST AND LAMA_BUILD_TEST )
 
-include ( PackageDoxygen )
 
+############################################################################
+#   Examples
+############################################################################
+
+### copy examples in build directory
+
+file ( COPY ${CMAKE_SOURCE_DIR}/examples DESTINATION ${CMAKE_BINARY_DIR} )
+
+### generate file make.inc
+
+configure_file ( "${CMAKE_SOURCE_DIR}/examples/make.inc.in" "${CMAKE_CURRENT_BINARY_DIR}/examples/make.inc" )
+
+### install examples + generated make.inc in share directory
+
+file ( GLOB_RECURSE example_files ${CMAKE_SOURCE_DIR}/examples/* )
+install ( FILES ${example_files} DESTINATION share/examples )
+install ( FILES "${CMAKE_CURRENT_BINARY_DIR}/examples/make.inc" DESTINATION share/examples )
+
+############################################################################
+#   Doxygen 
+############################################################################
+
+include ( PackageDoxygen )
 
 ### install ###
 configure_file( "${CMAKE_SOURCE_DIR}/lama/lama.hpp.in" "${CMAKE_CURRENT_BINARY_DIR}/include/lama.hpp" )
