--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -117,18 +117,14 @@ endif ( FOUND_BOOST_TEST AND LAMA_BUILD_TEST )
 #   Examples
 ############################################################################
 
-### copy examples in build directory
+### copy examples in build directory + install it
 
 file ( COPY ${CMAKE_SOURCE_DIR}/examples DESTINATION ${CMAKE_BINARY_DIR} )
+install ( DIRECTORY ${CMAKE_SOURCE_DIR}/examples DESTINATION share/examples )
 
-### generate file make.inc
+### generate file make.inc + install it
 
 configure_file ( "${CMAKE_SOURCE_DIR}/examples/make.inc.in" "${CMAKE_CURRENT_BINARY_DIR}/examples/make.inc" )
-
-### install examples + generated make.inc in share directory
-
-file ( GLOB_RECURSE example_files ${CMAKE_SOURCE_DIR}/examples/* )
-install ( FILES ${example_files} DESTINATION share/examples )
 install ( FILES "${CMAKE_CURRENT_BINARY_DIR}/examples/make.inc" DESTINATION share/examples )
 
 ############################################################################
