Added all.hpp for matrix; made constructors of base class Matrix protected.

--- a/src/lama/matrix/CMakeLists.txt
+++ b/src/lama/matrix/CMakeLists.txt
@@ -42,7 +42,10 @@ set ( CLASSES
         SparseMatrix
     )
 
+set ( HEADERS all CRTPMatrix )
+
 lama_classes ( ${CLASSES} )
+lama_headers ( ${HEADERS} )
 
 ### add sources and headers to parent scope ###
 lama_add ()
