added simple example from viennacl concentrate norm includes in lama/norm/all.hpp

--- a/src/lama/norm/CMakeLists.txt
+++ b/src/lama/norm/CMakeLists.txt
@@ -38,7 +38,12 @@ set ( CLASSES
         Norm
     )
 
+set ( HEADERS
+        all
+    )
+
 lama_classes ( ${CLASSES} )
+lama_headers ( ${HEADERS} )
 
 ### add sources and headers to parent scope ###
 lama_add ()
