--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -44,6 +44,8 @@ message ( STATUS "" )
 project ( LAMA CXX C )
 set ( CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../CMake/Modules" )
 set ( LAMA_VERSION "1.0.0" )
+set ( LAMA_VERSION_NAME "Alpamayo" )
+set ( LAMA_COPYRIGHT_YEAR 2013 )
 set ( LAMA_VERSION_MAJOR 1 )
 set ( LAMA_VERSION_MINOR 0 )
 set ( LAMA_VERSION_PATCH 0 )
@@ -282,7 +284,7 @@ message ( STATUS "" )
 
 
 lama_status_message ( HEADLINE "INFO:" )
-message ( STATUS "LAMA Version : ${LAMA_VERSION}" )
+message ( STATUS "LAMA Version : ${LAMA_VERSION} ${LAMA_VERSION_NAME}" )
 message ( STATUS "Build Type   : ${CMAKE_BUILD_TYPE}" )
 message ( STATUS "LOG Level    : ${LAMA_LOG_LEVEL}" )
 message ( STATUS "ASSERT Level : ${LAMA_ASSERT_LEVEL}" )
