CUDASettings extended to get value for UseSharedMem

--- a/src/lama/cuda/CMakeLists.txt
+++ b/src/lama/cuda/CMakeLists.txt
@@ -47,7 +47,7 @@ set ( CLASSES
         CUDAHostContextManager
         CUDALAPACK
         CUDAStreamSyncToken
-        CUDATexture
+        CUDASettings
     )
 
 lama_classes ( ${CLASSES} )
