api doc for scalar and vector added

--- a/src/examples/tutorial/Makefile
+++ b/src/examples/tutorial/Makefile
@@ -4,7 +4,7 @@ INCLUDE_FLAGS = -I${BOOST_INCLUDE_DIR} -I${LAMA_ROOT}/include
 
 LD_FLAGS = -L${LAMA_ROOT}/lib -llama -Wl,-rpath=${LAMA_ROOT}/lib 
 
-EXECUTABLE: simple.exe vector.exe solver.exe blas1.exe vector_exp.exe matrix.exe
+EXECUTABLE: simple.exe vector.exe solver.exe blas1.exe vector_exp.exe matrix.exe scalar.exe
 
 .SUFFIXES:
 
