--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -143,9 +143,9 @@ add_executable ( lama_test lama_test.cpp ${CXX_SOURCES} )
 
 ### target link libraries ###
 if ( WIN32 )
-    target_link_libraries ( lama_test lama )
+    target_link_libraries ( lama_test ama )
 else ( WIN32 )
-    target_link_libraries ( lama_test lama ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${Boost_REGEX_LIBRARY} )
+    target_link_libraries ( lama_test ama ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${Boost_REGEX_LIBRARY} )
 endif ( WIN32 )
 
 
