Update solver example

--- a/src/examples/solver/Makefile
+++ b/src/examples/solver/Makefile
@@ -6,6 +6,9 @@ LD_FLAGS = -L${LAMA_ROOT}/lib -llama -Wl,-rpath=${LAMA_ROOT}/lib
 
 EXECUTABLE: matrix_generator.exe cg_solver.exe jacobi_solver.exe
 
+cg_solver.exe: LAMAConfig.hpp
+jacobi_solver.exe: LAMAConfig.hpp
+
 .SUFFIXES:
 
 .SUFFIXES: .cpp .o
