CUDA CSR matrix operations using CUSparse library

--- a/src/lama/cuda/CMakeLists.txt
+++ b/src/lama/cuda/CMakeLists.txt
@@ -68,6 +68,26 @@ set ( CUDA_SOURCES
 ### set include directories ### 
 include_directories ( . ${CUDA_INCLUDE_DIRS} )
 
+### Check for cuSPASE library, Version 2
+
+message( STATUS "Check for cuSPARSE V2 include file in ${CUDA_INCLUDE_DIRS}" )
+
+set ( CUSPARSE_V2 false )
+
+foreach( dir "${CUDA_INCLUDE_DIRS}" )
+   if ( EXISTS "${dir}/cusparse_v2.h" )
+      set ( CUSPARSE_V2 true )
+   endif ()
+endforeach()
+
+if ( CUSPARSE_V2 )
+    message( STATUS "cuSPARSE Version 2 is supported and will be used" )
+    set ( CUDA_SOURCES ${CUDA_SOURCES} CUSparseCSRUtils.cu )
+    add_definitions( -DCUSPARSE_V2 )
+else()
+    message( STATUS "cuSPARSE Version 2 not supported" )
+endif()
+
 ### add CUDA library ###
 
 if ( NOT WIN32 )
