Added Settings for LAMA, fixed problems for CUDA CSR

--- a/src/lama/CMakeLists.txt
+++ b/src/lama/CMakeLists.txt
@@ -62,6 +62,7 @@ set ( CLASSES
         Printable
         ReadAccess
         Scalar
+        Settings
         StorageIO
         SyncToken
         Vector
