--- a/src/lama/lama.hpp.in
+++ b/src/lama/lama.hpp.in
@@ -30,6 +30,8 @@
  * @date 27.03.2013
  * @since 1.0.0
  */
+#ifndef LAMA_LAMA_INCLUDE_HPP_
+#define LAMA_LAMA_INCLUDE_HPP_
 
 #include <boost/version.hpp>
 #define LAMA_LINKED_BOOST_VERSION ${Boost_VERSION}
@@ -50,3 +52,5 @@ extern "C" inline int lama_getRevision()
 {
     return LAMA_REVISION;
 }
+
+#endif // LAMA_LAMA_INCLUDE_HPP_
