Added CMakeFile for libamacuda to build it after installation of LAMA

--- a/src/lama/CMakeLists.txt
+++ b/src/lama/CMakeLists.txt
@@ -79,6 +79,8 @@ set ( HEADERS
         NoSyncToken
         tracing
         TypeTraits
+        BLASInterface
+        UtilsInterface
     )
 
 lama_classes ( ${CLASSES} )
