--- a/src/test/distributed/CMakeLists.txt
+++ b/src/test/distributed/CMakeLists.txt
@@ -48,6 +48,7 @@ set ( SOURCE_FILES
         CyclicDistributionTest
         GenBlockDistributionTest
         GeneralDistributionTest
+        MetisDistributionTest
         NoDistributionTest
         P_CGTest
         P_COOSparseMatrixTest
