--- a/src/test/distributed/CMakeLists.txt
+++ b/src/test/distributed/CMakeLists.txt
@@ -48,7 +48,6 @@ set ( SOURCE_FILES
         CyclicDistributionTest
         GenBlockDistributionTest
         GeneralDistributionTest
-        MetisDistributionTest
         NoDistributionTest
         P_CGTest
         P_COOSparseMatrixTest
@@ -74,6 +73,10 @@ set ( SOURCE_FILES
         ../SparseMatrixHelper
         ../CommunicatorTest
     )
+    
+if ( METIS_FOUND OR PARMETIS_FOUND )
+    set ( SOURCE_FILES ${SOURCE_FILES} MetisDistributionTest )
+endif ( METIS_FOUND OR PARMETIS_FOUND )
 
 lama_classes ( ${CLASSES} )
 lama_sources ( ${SOURCE_FILES} )
