--- a/src/lama/CMakeLists.txt
+++ b/src/lama/CMakeLists.txt
@@ -35,9 +35,13 @@
 lama_set_source_dir ()
 
 ### include directories ###
-if ( METIS_FOUND OR PARMETIS_FOUND )
-    include_directories( ${PARMETIS_INCLUDE_DIR} ${METIS_INCLUDE_DIR} ) 
-endif ( METIS_FOUND OR PARMETIS_FOUND )
+if ( METIS_FOUND )
+    include_directories( ${METIS_INCLUDE_DIR} ) 
+endif ( METIS_FOUND )
+
+if ( METIS_FOUND AND PARMETIS_FOUND )
+    include_directories( ${PARMETIS_INCLUDE_DIR} ) 
+endif ( METIS_FOUND AND PARMETIS_FOUND )
 
 ### Add classes and header files ###
 set ( CLASSES
@@ -161,9 +165,13 @@ if ( NOT WIN32 )
 endif ( NOT WIN32 )
 
 # Metis / ParMetis
-if ( METIS_FOUND OR PARMETIS_FOUND )
-    set( LAMA_LINK_LIBRARIES ${LAMA_LINK_LIBRARIES} ${PARMETIS_LIBRARY} ${METIS_LIBRARY} )
-endif ( METIS_FOUND OR PARMETIS_FOUND ) 
+if ( METIS_FOUND )
+    set( LAMA_LINK_LIBRARIES ${LAMA_LINK_LIBRARIES} ${METIS_LIBRARY} )
+endif ( METIS_FOUND ) 
+
+if ( METIS_FOUND AND PARMETIS_FOUND )
+    set( LAMA_LINK_LIBRARIES ${LAMA_LINK_LIBRARIES} ${PARMETIS_LIBRARY} )
+endif ( METIS_FOUND AND PARMETIS_FOUND ) 
 
 if ( LAMA_BLAS_FOUND )
     set ( LAMA_LINK_LIBRARIES ${LAMA_LINK_LIBRARIES} ${LAMAPP_LINK_LIBRARIES} )
