--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -59,6 +59,7 @@ set ( SOURCE_FILES
         CommunicatorTest
         COOSparseMatrixTest
         COOStorageTest
+        COOUtilsTest
         CriterionTest
         CSRSparseMatrixTest
         CSRStorageTest
