added BiCG stabilized

--- a/src/lama/solver/CMakeLists.txt
+++ b/src/lama/solver/CMakeLists.txt
@@ -49,6 +49,7 @@ set ( CLASSES
         AMGSetupFactory
         AMGSetupManager
         BiCG
+        BiCGstab
         CG
         DefaultJacobi
         GMRES
