--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -52,7 +52,7 @@ set ( HEADERS
     )
 
 set ( SOURCE_FILES
-        BiCGstabTest
+        #BiCGstabTest
         BiCGTest
         BLAS1Test
 		BLAS2Test
