--- a/src/examples/spy/Makefile
+++ b/src/examples/spy/Makefile
@@ -4,7 +4,10 @@ INCLUDE_FLAGS = -I${BOOST_INCLUDE_DIR} -I${LAMA_ROOT}/include
 
 LD_FLAGS = -L${LAMA_ROOT}/lib -lama -Wl,-rpath=${LAMA_ROOT}/lib -lpng
 
-EXECUTABLE: spy.exe
+EXECUTABLE: spy.exe amg_spy.exe
+
+spy.exe: Bitmap.hpp
+amg_spy.exe: Bitmap.hpp
 
 .SUFFIXES:
 
