--- a/src/lama/cuda/CMakeLists.txt
+++ b/src/lama/cuda/CMakeLists.txt
@@ -1,5 +1,5 @@
 ###
- # @file CMakeLists.txt
+ # @file lama/cuda/CMakeLists.txt
  #
  # @license
  # Copyright (c) 2009-2013
@@ -25,34 +25,125 @@
  # SOFTWARE.
  # @endlicense
  #
- # @brief lama/cuda/CMakeLists.txt
- # @author Jan Ecker
- # @date 03.04.2013
- # @since 1.0.0
+ # @brief Separate building of libamacuda after installation of LAMA
+ # @author Thomas Brandes
+ # @date 01.07.2013
+ # @since 1.0.1
 ###
 
-### set this dir as lama source dir ###
-lama_set_source_dir ()
+### Set required CMake version
+cmake_minimum_required (VERSION 2.8)
 
-### Add classes and header files ###
-set ( CLASSES
-        CUDABLAS1
-        CUDABLAS2
-        CUDABLAS3
-        CUDAContext
-        CUDAContextManager
-        CUDAError
-        CUDAException
-        CUDAHostContext
-        CUDAHostContextManager
-        CUDALAPACK
-        CUDAStreamSyncToken
-        CUDASettings
+project ( LamaCUDA CXX )
+
+include ( FindCUDA )
+
+set ( CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../../../CMake/Modules" )
+
+### Take additional settings used for LAMA, e.g. compiler flags
+include ( CUDAFlags )
+
+################################################
+#  Find LAMA installation                      #
+################################################
+
+# Initial guess for LAMA_HOME by environment
+
+# If LAMA_HOME was defined in the environment, use it.
+if ( NOT LAMA_HOME AND NOT $ENV{LAMA_HOME} STREQUAL "" )
+    set( LAMA_HOME $ENV{LAMA_HOME} )
+endif( NOT LAMA_HOME AND NOT $ENV{LAMA_HOME} STREQUAL "" )
+
+# If LAMAHOME was defined in the environment, use it.
+if ( NOT LAMA_HOME AND NOT $ENV{LAMAHOME} STREQUAL "" )
+    set( LAMA_HOME $ENV{LAMAHOME} )
+endif( NOT LAMA_HOME AND NOT $ENV{LAMAHOME} STREQUAL "" )
+
+# If LAMA_ROOT was defined in the environment, use it.
+if ( NOT LAMA_HOME AND NOT $ENV{LAMA_ROOT} STREQUAL "")
+  set(LAMA_HOME $ENV{LAMA_ROOT})
+endif( NOT LAMA_HOME AND NOT $ENV{LAMA_ROOT} STREQUAL "")
+
+if( LAMA_HOME )
+    file( TO_CMAKE_PATH ${LAMA_HOME} LAMA_HOME )
+endif( LAMA_HOME )
+
+# cache LAMA_HOME, might be defined manually
+set( LAMA_HOME ${LAMA_HOME} CACHE PATH "LAMA installation directory" )
+
+find_library( LAMA_LIB
+              NAMES ama
+              HINTS ${LAMA_HOME}/lib )
+
+find_library( LAMA_LOG_LIB
+              NAMES log4lama
+              HINTS ${LAMA_HOME}/lib )
+
+#################################################################
+#  Inherit ASSERT, LOG, and TRACE level from installation       #
+#################################################################
+
+if ( EXISTS "${LAMA_HOME}/include/lama.hpp" )
+
+    # read the content of lama.hpp in a variable
+    file ( STRINGS ${LAMA_HOME}/include/lama.hpp LAMA_HPP )
+
+    # match for defintions
+    string( REGEX MATCH "LAMA_ASSERT_LEVEL_[A-Z]*" LAMA_ASSERT_LEVEL "${LAMA_HPP}" )
+    string( REGEX MATCH "LAMA_LOG_LEVEL_[A-Z]*" LAMA_LOG_LEVEL "${LAMA_HPP}" )
+    string( REGEX MATCH "LAMA_TRACE_LEVEL_[A-Z]*" LAMA_TRACE_LEVEL "${LAMA_HPP}" )
+
+    # cache the defintions
+    set( LAMA_ASSERT_LEVEL ${LAMA_ASSERT_LEVEL} CACHE STRING "Taken over from LAMA installation" )
+    set( LAMA_LOG_LEVEL ${LAMA_LOG_LEVEL} CACHE STRING "Taken over from LAMA installation" )
+    set( LAMA_TRACE_LEVEL ${LAMA_TRACE_LEVEL} CACHE STRING "Taken over from LAMA installation" )
+
+    # take LAMA_HOME also as installation directory
+
+    if ( CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT )
+        set( CMAKE_INSTALL_PREFIX ${LAMA_HOME} CACHE PATH "Installation directory same as LAMA_HOME" FORCE )
+    endif( CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT )
+
+else ( EXISTS "${LAMA_HOME}/include/lama.hpp" )
+
+    message( STATUS "Cannot set LAMA levels as ${LAMA_HOME}/include/lama.hpp is not available" )
+
+endif ( EXISTS "${LAMA_HOME}/include/lama.hpp" )
+
+# CMAKE configuration variable that guarantees adding rpath for installed
+# libraries; very useful so that installed library can be used without 
+# complex settings of LD_LIBRARY_PATH
+
+set ( CMAKE_SKIP_BUILD_RPATH FALSE )
+set ( CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
+set ( CMAKE_BUILD_WITH_INSTALL_RPATH FALSE )
+set ( CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE )
+
+# make sure that the default is a RELEASE
+
+if ( NOT CMAKE_BUILD_TYPE)
+   set(CMAKE_BUILD_TYPE RELEASE CACHE STRING
+      "Choose the type of build, options are: None Debug Release."
+      FORCE)
+endif ( NOT CMAKE_BUILD_TYPE)
+
+### Set C++ Sources ###
+set ( CXX_SOURCES
+        CUDABLAS1.cpp
+        CUDABLAS2.cpp
+        CUDABLAS3.cpp
+        CUDAContext.cpp
+        CUDAContextManager.cpp
+        CUDAError.cpp
+        CUDAException.cpp
+        CUDAHostContext.cpp
+        CUDAHostContextManager.cpp
+        CUDALAPACK.cpp
+        CUDAStreamSyncToken.cpp
+        CUDASettings.cpp
     )
 
-lama_classes ( ${CLASSES} )
-
-### Add CUDA Sources ###
+### Set CUDA Sources ###
 set ( CUDA_SOURCES
         blas1.cu
         blas3.cu
@@ -65,66 +156,28 @@ set ( CUDA_SOURCES
         CUDACOOUtils.cu
     )
     
+### add interfaces to cuSPASE library, Version 2 (since CUDA 5.0) if available
+
+if ( CUSPARSE_V2 )
+    set ( CUDA_SOURCES ${CUDA_SOURCES} CUSparseCSRUtils.cu )
+endif ( CUSPARSE_V2 )
+
+### add definitions
+add_definitions( -D${LAMA_ASSERT_LEVEL} -D${LAMA_LOG_LEVEL} -D${LAMA_TRACE_LEVEL} )
+
 ### set include directories ### 
-include_directories ( . ${CUDA_INCLUDE_DIRS} )
+include_directories ( . ${CMAKE_SOURCE_DIR}/../.. ${CUDA_INCLUDE_DIRS} )
 
-### Check for cuSPASE library, Version 2 (since CUDA 5.0)
-
-if ( CUDA_VERSION_MAJOR MATCHES "5" )
-
-    message( STATUS "Check for cuSPARSE V2 include file in ${CUDA_INCLUDE_DIRS}" )
-    
-    set ( CUSPARSE_V2 false )
-    
-    foreach( dir "${CUDA_INCLUDE_DIRS}" )
-       if ( EXISTS "${dir}/cusparse_v2.h" )
-          set ( CUSPARSE_V2 true )
-       endif ( EXISTS "${dir}/cusparse_v2.h" )
-    endforeach( dir "${CUDA_INCLUDE_DIRS}" )
-    
-    if ( CUSPARSE_V2 )
-        message( STATUS "cuSPARSE Version 2 is supported and will be used" )
-        set ( CUDA_SOURCES ${CUDA_SOURCES} CUSparseCSRUtils.cu )
-    else( CUSPARSE_V2 )
-        message( STATUS "cuSPARSE Version 2 not supported" )
-    endif( CUSPARSE_V2 )
-    
-endif ( CUDA_VERSION_MAJOR MATCHES "5" )
+# Linux requires explicit CUDA compilation of *.cu files
+cuda_compile ( CUDA_FILES ${CUDA_SOURCES} )
 
 ### add CUDA library ###
-
-if ( NOT WIN32 )
-
-    # Linux requires explicit CUDA compilation of *.cu files
-
-    cuda_compile ( CUDA_FILES ${CUDA_SOURCES} )
-    add_library( amacuda SHARED ${CXX_SOURCES} ${CUDA_FILES} )
-
-else( NOT WIN32 )
-
-    # Windows suports different compilation for *.cpp and *.cu files
-
-    cuda_add_library( amacuda SHARED ${CXX_SOURCES} ${CUDA_SOURCES} )
-
-endif( NOT WIN32 )
-
-### Older cmake version have not set CUDA_cusparse_LIBRARY
-
-if ( NOT CUDA_cusparse_LIBRARY )
-
-    ### cusparse is usually in same directory as cublas
-
-    get_filename_component( HINT_CUDA_LIBRARY_DIR ${CUDA_cublas_LIBRARY} PATH )
-
-    find_library( CUDA_cusparse_LIBRARY NAMES cusparse
-                  HINTS ${HINT_CUDA_LIBRARY_DIR} )
-
-    mark_as_advanced( CUDA_cusparse_LIBRARY )
-
-endif ( NOT CUDA_cusparse_LIBRARY )
+add_library( amacuda SHARED ${CXX_SOURCES} ${CUDA_FILES} )
 
 ### target link libraries ###
 target_link_libraries( amacuda
+                        ${LAMA_LIB}
+                        ${LAMA_LOG_LIB}
                         ${CUDA_cusparse_LIBRARY}
                         ${CUDA_cublas_LIBRARY} 
                         ${CUDA_CUDART_LIBRARY}
@@ -133,3 +186,6 @@ target_link_libraries( amacuda
 
 ### install library
 install ( TARGETS amacuda DESTINATION lib )
+file( GLOB CXX_HEADERS *.hpp )
+install ( FILES ${CXX_HEADERS} DESTINATION include/lama/cuda )
+
