--- a/src/test/distributed/CMakeLists.txt
+++ b/src/test/distributed/CMakeLists.txt
@@ -104,5 +104,5 @@ add_executable ( lama_dist_test lama_dist_test.cpp ${CXX_SOURCES} )
 if ( WIN32 )
     target_link_libraries ( lama_dist_test ama )
 else ( WIN32 )
-    target_link_libraries ( lama_dist_test ama ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${Boost_REGEX_LIBRARY} )
+    target_link_libraries ( lama_dist_test ama ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${Boost_REGEX_LIBRARY} ${Boost_THREAD_LIBRARY} )
 endif ( WIN32 )
