--- a/src/test/cuda/CMakeLists.txt
+++ b/src/test/cuda/CMakeLists.txt
@@ -74,5 +74,5 @@ add_executable ( lama_cuda_test lama_cuda_test.cpp ${CXX_SOURCES} )
 if ( WIN32 )
     target_link_libraries ( lama_cuda_test ama )
 else ( WIN32 )
-    target_link_libraries ( lama_cuda_test ama ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} )
+    target_link_libraries ( lama_cuda_test ama ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${Boost_THREAD_LIBRARY} )
 endif ( WIN32 )
